deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedwise
spec:
  selector:
    app: wedwise
  ports:
  - port: 80
    targetPort: 8080
